<resources>
    <string name="app_name">EasyCure</string>
    <string name="main_title">We work for and\nfor you 24h daily</string>
    <string name="main_message">Your health will be guarded by us</string>
    <string name="call_us">Call Us</string>
    <string name="health_information">Health Information</string>
    <string name="something_you_want">Something You Want</string>
    <string name="forgot_pwd">Forgot Password ?</string>
    <string name="sign_in">SIGN IN</string>
    <string name="no_account">Don\'t have an account yet ? </string>
    <string name="sign_up">  Sign Up</string>
    <string name="sign_up_big">SIGN UP</string>
    <string name="health_knowledge">Health Knowledge</string>
    <string name="classify">Classify</string>
    <string name="cancel">Cancel</string>
    <string name="only_wifi">Only WiFi</string>
    <string name="never">Never</string>
    <string name="automatic_download">Automatic Download</string>
    <string name="ecure_service_agreement">ECure Service Agreement</string>
    <string name="ec_service_agreement">EasyCure Service Agreement</string>
    <string name="service_agreement1">1.Confirmation of ECure Service Agreement</string>
    <string name="service_agreement2">2.ECure service related definition</string>
    <string name="service_agreement3">3.Service content provided by ECure</string>
    <string name="service_agreement4">4.Registration, use and cancellation of ECure accounts</string>
    <string name="service_agreement5">5.Considerations for using the ECure service</string>
    <string name="service_agreement6">6.Commitment of users legally using ECure services</string>
    <string name="service_agreement7">7.User rights protection and information protection</string>
    <string name="service_agreement8">8.Force majeure, exemption and limitation of liability</string>
    <string name="service_agreement9">9.Protection of intellectual property rights</string>
    <string name="service_agreement_foreword">Thank you for choosing ECure service. The ECure Service Agreement (hereinafter referred to
    as this Agreement) is signed by the ECure Team (hereinafter referred to as us)</string>
    <string name="service_agreement1_content">1、Please read the contents of this agreement carefully. If you have any
        questions about the content of this agreement or the information on the page, please do not proceed to the next
        step. You can consult by adding ECure official QQ: 844964206, so that we can explain and explain for you. By clicking
        on the page or by other means, you agree to this Agreement.\n
    2.If we modify this agreement, we will notify you by popping up the window. If you are unable to agree to change the
        content of the revised agreement, you have the right to stop using the related services; if the two parties agree,
        the relevant services and corresponding agreement contents may be changed separately.\n
    3.If you are a person without civil capacity or a person with limited capacity for civil conduct, please inform your
        guardian and read this agreement and use our services under the direction of your guardian. If you are not a user
        within the territory of the People\'s Republic of China (for the purposes of this agreement, excluding Hong Kong,
        Macao Special Administrative Region and Taiwan), you must also abide by the laws of your country or region, and you
        will confirm that you have entered into and traveled this Agreement. Violation of laws and regulations of the country
        or region in which you belong, reside or conduct business or other business.</string>
    <string name="service_agreement2_content">1、ECure account (or \"account\"): refers to the account that you obtained after you
        obtained the ECure login account and verified by mobile phone for you to use the ECure service.\n
    2、ECure login account: refers to the mobile phone number that receives the verification code during the process of registering
        the ECure account. This mobile phone number will be used as the login account of your ECure account.\n
    3、Identity element: refers to the information element we use to identify you. Currently, we only support SMS verification code
        verification.\n
    4、Nickname: refers to the account name that you open to the public. We treat the user\'s account number (ie mobile phone number)
        confidentially, that is, do not disclose the mobile phone number.\n
    5、Official QQ: 844964206</string>
    <string name="service_agreement3_content">1、Condition selection: The user selects the relevant condition in combination with his or
        her own symptoms, and further confirms the condition according to the clinical manifestation corresponding to the condition.
        After selecting the disease, a medical record will be generated. The user can roughly judge the current physical condition
        according to the description in the case, and the recommended drugs corresponding to the relevant disease are also given in
        the case.\n
    2、Drug recommendation: We recommend several drugs with higher sales and heat for the basic symptoms selected by the user, but only
        for screening. The drugs recommended by the system can only be used as users.The reference drug for selecting a basic condition,
        such as a serious condition, is not a target of the service, and it is strongly recommended that you go to the hospital in time. \n
    3、Health Information: We will update the Health Information Module regularly to ensure that users can learn some of the common
        health tips in the life of the article and keep the user\'s health information fresh in a regularly updated way.\n
    4、Health knowledge: We will make recommendations on the main parts of the body or some living habits, and let the user know
        how to do a good job of health and maintenance, so as to develop a good habit.\n
    5、Memo: The memo function is provided in the software, allowing the user to write the memo content in the software. When the user
        uses the software again, he will pay attention to the memo information recorded before.\n
    6、Positioning: We use the positioning system of Gaode map to provide users with location services
        for surrounding hospitals and pharmacies.\n
    7、Internationalization: The software provides Chinese and English bilingual support services, and automatically selects the
        display language according to the user\'s mobile phone time zone. </string>
    <string name="service_agreement4_content">1、Registration: All services are available after registration is complete. The nickname
        you set in your account will be visible to the outside world, and your mobile number (ie login account) will be kept confidential.\n
        2、Login: We only provide login for this platform (registered users of this platform).\n
        3、Use: The identity element allows us to identify the basis of your identity, please be sure to keep it safe.
        The operation using the identity element and the instructions issued are deemed to be made by you. The account,
        password and other information caused by your reasons are fraudulently used, stolen or illegally used, and the
        risks and losses caused by you are at your own risk.\n
        4、Logout: You can only apply for cancellation of your own account and cancel it in accordance with our procedures.
        In order to protect the legitimate interests of you and other users, the account you apply for cancellation should
        have no unresolved rights or obligations or other disputes arising from the cancellation of the account. There are
        no outstanding transactions.</string>
    <string name="service_agreement5_content">1. Authentication: In the process of identity verification, please keep the network environment unblocked, and ensure that the network environment is safe and you can log in and check the symptoms. \n
     2, the disease query, we launched the disease inquiry service, according to the type of disease - clinical performance to correspond to the user\'s own situation, to determine what type of disease is probably, and provide recommended drugs for reference. But this is only a recommendation and can only be used as a reference. in case
     Users can indeed determine their own symptoms such as: cough and other common symptoms, you can refer to the results of drug recommendations to buy drugs, and if the user is not sure about the specific disease and the condition is more serious, then do not act
     The service object of this function, and it is strongly recommended that the user go to the hospital in time for medical treatment. \n</string>
    <string name="service_agreement6_content">1、You are required to abide by the laws and regulations of the People\'s Republic of China
        and the countries or regions in which you belong, reside or carry out business activities or other business, and may not use our
        services for illegal purposes (including transactions for prohibiting or restricting trading goods). ), nor can we use
        our services illegally.\n
    2、You may not use our services to engage in the infringement of the lawful rights and interests of others or violate national
        laws and regulations, otherwise we have the right to investigate, delay or refuse to settle or stop providing services, and
        you are responsible for any legal liability, such as this leads us or other If the party is damaged, you will be liable for
        compensation.</string>
    <string name="service_agreement7_content">We always adhere to the principle of \"customer first\" and strive to bring you small
        and beautiful changes. We attach great importance to the protection of your information, and strictly implement the information
        security protection system to ensure that your user data will not be leaked, create a good network environment for you, and
        enhance your user experience.</string>
    <string name="service_agreement8_content">Disclaimer\nWe are not liable for the following reasons: We are exempt from
        liability:\n1.Our system is down for maintenance or upgrades;\n
    2、Force majeure causes such as typhoons, earthquakes, floods, lightning or terrorist attacks;\n
    3、Your equipment hardware and communication lines, power supply lines have failed, etc.;\n
    4、Due to your improper operation or use of our services, etc., without our authorization or approval;\n
    5、Due to viruses, Trojans, malicious program attacks, network congestion, system instability, system or device failures,
        communication failures, power failures, banking reasons, third-party services, or government actions.\n
    In spite of the provisions of the preceding paragraph, we will take reasonable actions to actively promote the return of services to normal.\n\n
    Limitation of Liability\n We may provide services to you and your (transactional) counterparty at the same time. You agree
        to expressly waive any actual or potential conflict of interest for such conduct that we may have, and we cannot claim
        that we are providing There is a legal flaw in the service.</string>
    <string name="service_agreement9_content">1、Do not use, modify, decompile, reproduce, publicly transmit, alter, distribute,
        make hairstyles or publicly publish ECure programs or content without our written consent;\n2、Respect for intellectual property
        rights is also your obligation. If there is a violation, you will be liable for damages.</string>
    <string name="my_customer_service">My Customer Service</string>
    <string name="content_customized">Custom content</string>
    <string name="your_problem">Guess Your Problem</string>
    <string name="case1">Case 1 </string>
    <string name="case2">Case 2 </string>
    <string name="case3">Case 3 </string>
</resources>