<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/h10"
        android:layout_marginLeft="@dimen/w10"
        android:layout_marginRight="@dimen/w15">
        <ImageView
            android:id="@+id/activity_service_agreement_iv"
            android:layout_width="@dimen/w20"
            android:layout_height="@dimen/h15"
            android:layout_centerVertical="true"
            android:background="@mipmap/icon_back"></ImageView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ec_service_agreement"
            android:textSize="@dimen/h15"
            android:layout_toRightOf="@id/activity_service_agreement_iv"
            android:layout_marginLeft="@dimen/w6"></TextView>
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/h1"
        android:background="@color/colorGray"
        android:layout_marginTop="@dimen/h5"
        android:alpha="0.3"></View>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginRight="@dimen/w20">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ecure_service_agreement"
                android:textSize="@dimen/h12"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/h15"
                android:layout_marginBottom="@dimen/h8"></TextView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/service_agreement1"
                android:textSize="@dimen/h10"
                android:layout_marginTop="@dimen/h5"
                android:layout_marginLeft="@dimen/w10"
                ></TextView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/service_agreement2"
                android:textSize="@dimen/h10"
                android:layout_marginTop="@dimen/h5"
                android:layout_marginLeft="@dimen/w10"
                ></TextView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/service_agreement3"
                android:textSize="@dimen/h10"
                android:layout_marginTop="@dimen/h5"
                android:layout_marginLeft="@dimen/w10"
                ></TextView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/service_agreement4"
                android:textSize="@dimen/h10"
                android:layout_marginTop="@dimen/h5"
                android:layout_marginLeft="@dimen/w10"
                ></TextView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/service_agreement5"
                android:textSize="@dimen/h10"
                android:layout_marginTop="@dimen/h5"
                android:layout_marginLeft="@dimen/w10"
                ></TextView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/service_agreement6"
                android:textSize="@dimen/h10"
                android:layout_marginTop="@dimen/h5"
                android:layout_marginLeft="@dimen/w10"
                ></TextView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/service_agreement7"
                android:textSize="@dimen/h10"
                android:layout_marginTop="@dimen/h5"
                android:layout_marginLeft="@dimen/w10"
                ></TextView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/service_agreement8"
                android:textSize="@dimen/h10"
                android:layout_marginTop="@dimen/h5"
                android:layout_marginLeft="@dimen/w10"
                ></TextView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/service_agreement9"
                android:textSize="@dimen/h10"
                android:layout_marginTop="@dimen/h5"
                android:layout_marginLeft="@dimen/w10"
                ></TextView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/service_agreement_foreword"
                android:textSize="@dimen/h10"
                android:layout_marginTop="@dimen/h15"
                android:layout_marginBottom="@dimen/h15"
                android:layout_marginLeft="@dimen/w10"
                ></TextView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/service_agreement1"
                android:textSize="@dimen/h10"
                android:textStyle="bold"
                android:layout_marginTop="@dimen/h5"
                android:layout_marginLeft="@dimen/w10"
                ></TextView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/service_agreement1_content"
                android:textSize="@dimen/h10"
                android:layout_marginTop="@dimen/h5"
                android:layout_marginLeft="@dimen/w10"
                ></TextView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/service_agreement2"
                android:textSize="@dimen/h10"
                android:textStyle="bold"
                android:layout_marginTop="@dimen/h10"
                android:layout_marginLeft="@dimen/w10"
                ></TextView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/service_agreement2_content"
                android:textSize="@dimen/h10"
                android:layout_marginTop="@dimen/h5"
                android:layout_marginLeft="@dimen/w10"
                ></TextView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/service_agreement3"
                android:textSize="@dimen/h10"
                android:textStyle="bold"
                android:layout_marginTop="@dimen/h10"
                android:layout_marginLeft="@dimen/w10"
                ></TextView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/service_agreement3_content"
                android:textSize="@dimen/h10"
                android:layout_marginTop="@dimen/h5"
                android:layout_marginLeft="@dimen/w10"
                ></TextView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/service_agreement4"
                android:textSize="@dimen/h10"
                android:textStyle="bold"
                android:layout_marginTop="@dimen/h10"
                android:layout_marginLeft="@dimen/w10"
                ></TextView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/service_agreement4_content"
                android:textSize="@dimen/h10"
                android:layout_marginTop="@dimen/h5"
                android:layout_marginLeft="@dimen/w10"
                ></TextView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/service_agreement5"
                android:textSize="@dimen/h10"
                android:textStyle="bold"
                android:layout_marginTop="@dimen/h10"
                android:layout_marginLeft="@dimen/w10"
                ></TextView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/service_agreement5_content"
                android:textSize="@dimen/h10"
                android:layout_marginTop="@dimen/h5"
                android:layout_marginLeft="@dimen/w10"
                ></TextView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/service_agreement6"
                android:textSize="@dimen/h10"
                android:textStyle="bold"
                android:layout_marginTop="@dimen/h10"
                android:layout_marginLeft="@dimen/w10"
                ></TextView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/service_agreement6_content"
                android:textSize="@dimen/h10"
                android:layout_marginTop="@dimen/h5"
                android:layout_marginLeft="@dimen/w10"
                android:orientation="vertical"></TextView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/service_agreement7"
                android:textSize="@dimen/h10"
                android:textStyle="bold"
                android:layout_marginTop="@dimen/h10"
                android:layout_marginLeft="@dimen/w10"
                ></TextView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/service_agreement7_content"
                android:textSize="@dimen/h10"
                android:layout_marginTop="@dimen/h5"
                android:layout_marginLeft="@dimen/w10"
                ></TextView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/service_agreement8"
                android:textSize="@dimen/h10"
                android:textStyle="bold"
                android:layout_marginTop="@dimen/h10"
                android:layout_marginLeft="@dimen/w10"
                ></TextView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/service_agreement8_content"
                android:textSize="@dimen/h10"
                android:layout_marginTop="@dimen/h5"
                android:layout_marginLeft="@dimen/w10"
                ></TextView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/service_agreement9"
                android:textSize="@dimen/h10"
                android:textStyle="bold"
                android:layout_marginTop="@dimen/h10"
                android:layout_marginLeft="@dimen/w10"
                ></TextView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/service_agreement9_content"
                android:textSize="@dimen/h10"
                android:layout_marginTop="@dimen/h5"
                android:layout_marginBottom="@dimen/h20"
                android:layout_marginLeft="@dimen/w10"
                ></TextView>

        </LinearLayout>
    </ScrollView>

</LinearLayout>