<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RadioGroup
        android:id="@+id/activity_case_rg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/h20">

        <RadioButton
            android:id="@+id/activity_case_rb1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/case1"
            android:layout_marginRight="@dimen/w30"
            android:visibility="gone"
            ></RadioButton>
        <RadioButton
            android:id="@+id/activity_case_rb2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/case2"
            android:layout_marginRight="@dimen/w30"
            android:visibility="gone"
            ></RadioButton>
        <RadioButton
            android:id="@+id/activity_case_rb3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/case3"
            android:layout_marginRight="@dimen/w30"
            android:visibility="gone"></RadioButton>

    </RadioGroup>

    <FrameLayout
        android:id="@+id/activity_case_fl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/h5"
        android:layout_below="@id/activity_case_rg"></FrameLayout>


</RelativeLayout>